package Lab3;

public interface EmployeeInfo {
    public double FACULTY_MONTHLY_SALARY = 5000.00;
    public double STAFF_MONTHLY_HOURS_WORKED = 160;



}
