@startuml

title __LAB3's Class Diagram__\n

  namespace  {
    namespace ab3 {
      class Lab3.Education {
          - Degree : String
          - Major : String
          - Research : int
          + Education()
          + Education()
          + getDegree()
          + getMajor()
          + getResearch()
          + setDegree()
          + setMajor()
          + setResearch()
      }
    }
  }
  

  namespace  {
    namespace ab3 {
      abstract class Lab3.Employee {
          {static} + iDComparatorDSD : Comparator<Employee>
          - FirstName : String
          - ID : String
          - LastName : String
          + Employee()
          + Employee()
          + compareTo()
          + getFirstName()
          + getID()
          + getLastName()
          {abstract} + monthly_earning()
          + setFirstName()
          + setID()
          + setLastName()
          + toString()
      }
    }
  }
  

  namespace  {
    namespace ab3 {
      interface Lab3.EmployeeInfo {
          {static} + FACULTY_MONTHLY_SALARY : double
          {static} + STAFF_MONTHLY_HOURS_WORKED : double
      }
    }
  }
  

  namespace  {
    namespace ab3 {
      class Lab3.Faculty {
          + Faculty()
          + Faculty()
          + getLevel()
          + getRole()
          + monthly_earning()
          + setEducation()
          + setRole()
          + toString()
      }
    }
  }
  

  namespace  {
    namespace ab3 {
      enum Level {
        AO
        AS
        FU
        NA
      }
    }
  }
  

  namespace  {
    namespace ab3 {
      class Lab3.PartTime {
          - WeekMonth : int
          - hoursWorkedWeek : int
          + PartTime()
          + PartTime()
          + getHourPerMonth()
          + getHours()
          + monthly_earning()
          + setHours()
          + toString()
      }
    }
  }
  

  namespace  {
    namespace ab3 {
      class Lab3.Staff {
          - HourRate : double
          + Staff()
          + Staff()
          + getHourRate()
          + monthly_earning()
          + setHourRate()
          + toString()
      }
    }
  }
  

  namespace  {
    namespace ab3 {
      class Lab3.Tester {
          {static} + main()
      }
    }
  }
  

  Lab3.Employee .up.|> java.lang.Comparable
  Lab3.Faculty -up-|> Lab3.Employee
  Lab3.Faculty o-- Lab3.Education : edu
  Lab3.Faculty o-- Lab3.Faculty.Level : role
  Lab3.Faculty +-down- Lab3.Faculty.Level
  Lab3.PartTime -up-|> Lab3.Staff
  Lab3.Staff -up-|> Lab3.Employee


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
